<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/home_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/title_input_layout"
            style="@style/Home.TitleTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/title_label"
            android:paddingHorizontal="10dp"
            android:paddingVertical="12dp"
            app:hintEnabled="true"
            app:layout_constraintEnd_toStartOf="@+id/year_input_layout"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/title_et"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="start"
                tools:text="Title" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/year_input_layout"
            style="@style/Home.TitleTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/year"
            android:paddingHorizontal="10dp"
            android:paddingVertical="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/title_input_layout"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/year_et"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="start"
                android:inputType="numberDecimal"
                tools:text="@string/year" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/id_input_layout"
            style="@style/Home.TitleTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/id"
            android:paddingHorizontal="10dp"
            android:paddingVertical="12dp"
            app:layout_constraintEnd_toStartOf="@+id/search_btn"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title_input_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/id_et"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="start"
                tools:text="@string/id" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/search_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:text="@string/search_label"
            app:layout_constraintBottom_toBottomOf="@id/id_input_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/id_input_layout"
            app:layout_constraintTop_toTopOf="@id/id_input_layout" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/movieList"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:clipToPadding="false"
            android:orientation="vertical"
            android:paddingBottom="56dp"
            android:visibility="gone"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/id_input_layout"
            tools:visibility="visible" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/id_input_layout"
            tools:visibility="visible" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>